--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 </head>
 
 <body>
-<h1>Practice Webpage</h1>
-<p>This is a text</p>
+  <h1>Projects</h1>
+
+  <ul>
+    <a href="project1.html"><li>Project1</li></a>
+  </ul>
 </body>
 </html>
